# qt-learning-networkInterface

./: .gitignore  CMakeLists.txt  ReadMe.md  build.ninja  cmake_install.cmake
src/: CMakeLists.txt  cmake_install.cmake  main.cpp  myNetworkInterface.cpp  myNetworkInterface.h
